# BioBuilders

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
LICENSES/: biosteam_license.txt
biobuilders/: __init__.py
biobuilders/chems/: __init__.py  exceptions.py  manager.py  validations.py
biobuilders/diagrams/: contourplot.py
biobuilders/evaluation/: __init__.py  contour.py  model.py
biobuilders/lca/: install_brightway.py
biobuilders/maps/: hierarchicalmap.py
biobuilders/results/: __init__.py  process_results.py  tearesults.py
biobuilders/supply/: __init__.py  capex.py  economic_analysis.py  opex.py
biobuilders/tea/: __init__.py  settingsprocess.py  tea.py  transportation.py
biobuilders/tools/: diagramtools.py  moisture_adjust.py
biobuilders/uncertainty/: param_functions.py
biobuilders/units/: __init__.py  adsorption.py  boiler.py  centrifuge.py  distillation.py  dryer.py  filtration.py  flash.py  mill.py  pellet.py  separator.py  sieving.py
bravas/: __init__.py
bravas/chems/: _build_database.py  chem_db.py  exceptions.py  manager.py  record.py  storage.py
bravas/data/: bravas_chemical_database.db
bravas/diagrams/: contourmap.py  sensitivity.py  uncertainty.py
bravas/maps/: __init__.py  autonomics.py  hierarchicalmap.py  initial_problem.py  municipalities.py  provinces.py  regions.py
bravas/parameters/: __init__.py  costsfromfile.py  parameters_loader.py  parametersfromfile.py
bravas/results/: __init__.py  massbalance.py  tearesults.py  unitsresults.py
bravas/sensitivity/: __init__.py  src_method.py
bravas/supply/: __init__.py  supplymodel.py
bravas/tea/: __init__.py  tea.py  transportation.py
bravas/tools/: __init__.py  diagramtools.py  moisture_adjust.py  reactiontools.py  streamtools.py
bravas/units/: __init__.py  adsorption.py  biomass_CHP.py  boiler.py  centrifuge.py  dryer.py  enzymatic_BSTR.py  evaporator.py  extraction.py  filtration.py  mill.py  mixing.py  pellet.py  reactors.py  separator.py
multimodelling/: __init__.py  test.py
multimodelling/chems/: __init__.py  _build_database.py  chem_db.py  chem_db_GUI.py  newchem.py
multimodelling/data/: reactions.json
multimodelling/diagrams/: __init__.py  contourmap.py  diagramtools.py  sensitivity.py  uncertainty.py
multimodelling/mathtools/: __init__.py  economy.py  sampling.py  solveparameter.py  (+2 more)
(+89 files in other folders)
