[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bravas"
version = "0.35.2"
description = "Library to perform biorefinery and value chain assestment."
authors = [
    { name = "Isaac, Andrea", email = "isaacleis.garrote@usc.es" }
]
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = { text = "MIT"}
urls = { "Homepage" = "https://github.com/Biogroup-USC/BRAVAS.git" }
dependencies = [
  "biosteam>=2.51.4",
  "pandas>=2.2.2",
  "thermosteam>=0.51.5",
  "pytz>=2024.1",
  "appdirs>=1.4.4",
  "openpyxl>=3.1.5",
  "matplotlib>=3.10.3",
  "seaborn>=0.13.0",
  "tqdm>=4.67.1"
]

[tool.setuptools.package-data]
bravas = ["data/chemicals_db/*.json"]